--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,8 @@
+2009-10-21 dr|z3d
+    * Enhance index.jsp with "paperclips" for the main links
+    * Tighten sidepanel layout to gain us some vertical screen real estate
+    * Update news.xml with the correct link for Chinese translation page
+
 2009-10-20 zzz
     * I2NP: Remove old TunnelCreateMessage and TunnelCreateStatusMessage
     * Logger: Don't kill the whole JVM if we can't open the log file
