--- a/apps/routerconsole/locale/messages_zh.po
+++ b/apps/routerconsole/locale/messages_zh.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: I2P routerconsole\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-10-20 11:55+0000\n"
-"PO-Revision-Date: 2009-10-19 12:59+0000\n"
-"Last-Translator: foo <foo@bar>\n"
+"PO-Revision-Date: 2009-10-22 01:00+0800\n"
+"Last-Translator: walking <walking@mail.i2p>\n"
 "Language-Team: foo <foo@par>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -19,263 +19,263 @@ msgstr ""
 
 #: ../jsp/WEB-INF/classes/net/i2p/router/web/jsp/configupdate_jsp.java:95
 msgid "config update"
-msgstr ""
+msgstr "更新设置"
 
 #: ../jsp/WEB-INF/classes/net/i2p/router/web/jsp/configupdate_jsp.java:334
 msgid "Update policy"
-msgstr ""
+msgstr "更新策略"
 
 #: src/net/i2p/router/web/CSSHelper.java:36
 #: src/net/i2p/router/web/SummaryBarRenderer.java:26
 #: src/net/i2p/router/web/SummaryBarRenderer.java:28
 msgid "I2P Router Console"
-msgstr ""
+msgstr "I2P路由控制台"
 
 #: src/net/i2p/router/web/ConfigUpdateHelper.java:90
 msgid "Notify only"
-msgstr ""
+msgstr "只提示"
 
 #: src/net/i2p/router/web/SummaryBarRenderer.java:42
 msgid "I2P Services"
-msgstr ""
+msgstr "I2P 服务"
 
 #: src/net/i2p/router/web/SummaryBarRenderer.java:48
 msgid "Manage your I2P hosts file here (I2P domain name resolution)"
-msgstr ""
+msgstr "管理您的 I2P HOST表(I2P域名解析表)"
 
 #: src/net/i2p/router/web/SummaryBarRenderer.java:50
 msgid "Addressbook"
-msgstr ""
+msgstr "地址簿"
 
 #: src/net/i2p/router/web/SummaryBarRenderer.java:54
 msgid "Built-in anonymous BitTorrent Client"
-msgstr ""
+msgstr "内建的匿名 BitTorrent 客户端"
 
 #: src/net/i2p/router/web/SummaryBarRenderer.java:56
 msgid "Torrents"
-msgstr ""
+msgstr "匿名BT"
 
 #: src/net/i2p/router/web/SummaryBarRenderer.java:60
 msgid "Anonymous webmail client"
-msgstr ""
+msgstr "匿名Web邮件客户端"
 
 #: src/net/i2p/router/web/SummaryBarRenderer.java:62
 msgid "Webmail"
-msgstr ""
+msgstr "匿名邮箱"
 
 #: src/net/i2p/router/web/SummaryBarRenderer.java:66
 msgid "Anonymous resident webserver"
-msgstr ""
+msgstr "内置的匿名Web服务器"
 
 #: src/net/i2p/router/web/SummaryBarRenderer.java:68
 msgid "Webserver"
-msgstr ""
+msgstr "匿名主页"
 
 #: src/net/i2p/router/web/SummaryBarRenderer.java:72
 msgid "Configure I2P Router"
-msgstr ""
+msgstr "设置 I2P 路由器"
 
 #: src/net/i2p/router/web/SummaryBarRenderer.java:74
 msgid "I2P Internals"
-msgstr ""
+msgstr "I2P内部设置"
 
 #: src/net/i2p/router/web/SummaryBarRenderer.java:80
 #: src/net/i2p/router/web/SummaryBarRenderer.java:344
 msgid "View existing tunnels and tunnel build status"
-msgstr ""
+msgstr "查看现存隧道及隧道的建立状态"
 
 #: src/net/i2p/router/web/SummaryBarRenderer.java:82
 msgid "Tunnels"
-msgstr ""
+msgstr "隧道"
 
 #: src/net/i2p/router/web/SummaryBarRenderer.java:86
 #: src/net/i2p/router/web/SummaryBarRenderer.java:221
 msgid "Show all current peer connections"
-msgstr ""
+msgstr "显示当前所有的节点连接"
 
 #: src/net/i2p/router/web/SummaryBarRenderer.java:88
 #: src/net/i2p/router/web/SummaryBarRenderer.java:223
 msgid "Peers"
-msgstr ""
+msgstr "节点"
 
 #: src/net/i2p/router/web/SummaryBarRenderer.java:92
 msgid "Show recent peer performance profiles"
-msgstr ""
+msgstr "显示当前节点的性能记录"
 
 #: src/net/i2p/router/web/SummaryBarRenderer.java:94
 msgid "Profiles"
-msgstr ""
+msgstr "节点信息"
 
 #: src/net/i2p/router/web/SummaryBarRenderer.java:98
 msgid "Show list of all known I2P routers"
-msgstr ""
+msgstr "包含所有已知I2P路由器的列表"
 
 #: src/net/i2p/router/web/SummaryBarRenderer.java:100
 msgid "NetDB"
-msgstr ""
+msgstr "网络数据库"
 
 #: src/net/i2p/router/web/SummaryBarRenderer.java:104
 msgid "Health Report"
-msgstr ""
+msgstr "路由器健康状况报告"
 
 #: src/net/i2p/router/web/SummaryBarRenderer.java:106
 msgid "Logs"
-msgstr ""
+msgstr "日志"
 
 #: src/net/i2p/router/web/SummaryBarRenderer.java:110
 msgid "Show the router's workload, and how it's performing"
-msgstr ""
+msgstr "显示I2P路由器的负载与工作状况"
 
 #: src/net/i2p/router/web/SummaryBarRenderer.java:112
 msgid "Jobs"
-msgstr ""
+msgstr "作业"
 
 #: src/net/i2p/router/web/SummaryBarRenderer.java:116
 msgid "Graph router performance"
-msgstr ""
+msgstr "路由性能统计图"
 
 #: src/net/i2p/router/web/SummaryBarRenderer.java:118
 msgid "Graphs"
-msgstr ""
+msgstr "统计图"
 
 #: src/net/i2p/router/web/SummaryBarRenderer.java:122
 msgid "Textual router performance statistics"
-msgstr ""
+msgstr "路由性能文字统计"
 
 #: src/net/i2p/router/web/SummaryBarRenderer.java:124
 msgid "Stats"
-msgstr ""
+msgstr "统计数据"
 
 #: src/net/i2p/router/web/SummaryBarRenderer.java:134
 msgid "I2P Router Help"
-msgstr ""
+msgstr "I2P路由帮助"
 
 #: src/net/i2p/router/web/SummaryBarRenderer.java:136
 msgid "General"
-msgstr ""
+msgstr "功能概述"
 
 #: src/net/i2p/router/web/SummaryBarRenderer.java:139
 msgid "Your unique I2P router identity is"
-msgstr ""
+msgstr "您I2P路由的唯一身份为"
 
 #: src/net/i2p/router/web/SummaryBarRenderer.java:143
 msgid "never reveal it to anyone"
-msgstr ""
+msgstr "切勿将其告诉任何人"
 
 #: src/net/i2p/router/web/SummaryBarRenderer.java:145
 msgid "Local Identity"
-msgstr ""
+msgstr "本地身份"
 
 #: src/net/i2p/router/web/SummaryBarRenderer.java:150
 msgid "Version"
-msgstr ""
+msgstr "版本"
 
 #: src/net/i2p/router/web/SummaryBarRenderer.java:157
 msgid "How long we've been running for this session"
-msgstr ""
+msgstr "本次路由运行时间"
 
 #: src/net/i2p/router/web/SummaryBarRenderer.java:160
 msgid "Uptime"
-msgstr ""
+msgstr "运行时间"
 
 #: src/net/i2p/router/web/SummaryBarRenderer.java:167
-msgid ""
-"Help with configuring your firewall and router for optimal I2P performance"
-msgstr ""
+msgid "Help with configuring your firewall and router for optimal I2P performance"
+msgstr "如何正确配置防火墙和(物理)路由器优化I2P性能"
 
 #: src/net/i2p/router/web/SummaryBarRenderer.java:194
 msgid "Download"
-msgstr ""
+msgstr "下载"
 
 #: src/net/i2p/router/web/SummaryBarRenderer.java:198
 #: src/net/i2p/router/web/SummaryBarRenderer.java:207
 msgid "Update"
-msgstr ""
+msgstr "更新"
 
 #: src/net/i2p/router/web/SummaryBarRenderer.java:203
 msgid "Download Unsigned"
-msgstr ""
+msgstr "下载未签名更新"
 
 #: src/net/i2p/router/web/SummaryBarRenderer.java:229
 msgid "Active"
-msgstr ""
+msgstr "活跃节点"
 
 #: src/net/i2p/router/web/SummaryBarRenderer.java:237
 msgid "Fast"
-msgstr ""
+msgstr "快速节点"
 
 #: src/net/i2p/router/web/SummaryBarRenderer.java:243
 msgid "High capacity"
-msgstr ""
+msgstr "高容量节点"
 
 #: src/net/i2p/router/web/SummaryBarRenderer.java:249
 msgid "Integrated"
-msgstr ""
+msgstr "已整合节点"
 
 #: src/net/i2p/router/web/SummaryBarRenderer.java:255
 msgid "Known"
-msgstr ""
+msgstr "已知节点"
 
 #: src/net/i2p/router/web/SummaryBarRenderer.java:270
 msgid "Help with firewall configuration"
-msgstr ""
+msgstr "如何配置防火墙"
 
 #: src/net/i2p/router/web/SummaryBarRenderer.java:272
 msgid "Check NAT/firewall"
-msgstr ""
+msgstr "检查NAT/防火墙"
 
 #: src/net/i2p/router/web/SummaryBarRenderer.java:309
 msgid "Configure router bandwidth allocation"
-msgstr ""
+msgstr "设置路由的带宽分配"
 
 #: src/net/i2p/router/web/SummaryBarRenderer.java:311
 msgid "Bandwidth in/out"
-msgstr ""
+msgstr "带宽(上/下行)"
 
 #: src/net/i2p/router/web/SummaryBarRenderer.java:328
 msgid "Total"
-msgstr ""
+msgstr "总计"
 
 #: src/net/i2p/router/web/SummaryBarRenderer.java:336
 msgid "Used"
-msgstr ""
+msgstr "已使用"
 
 #: src/net/i2p/router/web/SummaryBarRenderer.java:346
 msgid "Tunnels in/out"
-msgstr ""
+msgstr "通道(上/下行)"
 
 #: src/net/i2p/router/web/SummaryBarRenderer.java:351
 msgid "Exploratory"
-msgstr ""
+msgstr "探测"
 
 #: src/net/i2p/router/web/SummaryBarRenderer.java:359
 msgid "Client"
-msgstr ""
+msgstr "客户"
 
 #: src/net/i2p/router/web/SummaryBarRenderer.java:367
 msgid "Participating"
-msgstr ""
+msgstr "共享"
 
 #: src/net/i2p/router/web/SummaryBarRenderer.java:373
 msgid "What's in the router's job queue?"
-msgstr ""
+msgstr "查看路由的作业队列"
 
 #: src/net/i2p/router/web/SummaryBarRenderer.java:375
 msgid "Congestion"
-msgstr ""
+msgstr "拥堵"
 
 #: src/net/i2p/router/web/SummaryBarRenderer.java:380
 msgid "Job lag"
-msgstr ""
+msgstr "作业延迟"
 
 #: src/net/i2p/router/web/SummaryBarRenderer.java:386
 msgid "Message delay"
-msgstr ""
+msgstr "消息延迟"
 
 #: src/net/i2p/router/web/SummaryBarRenderer.java:392
 msgid "Tunnel lag"
-msgstr ""
+msgstr "隧道延迟"
 
 #: src/net/i2p/router/web/SummaryBarRenderer.java:398
 msgid "Backlog"
-msgstr ""
+msgstr "积压"
+
