* Console:       - Don't save config when checking for updates on configupdate.jsp       - Rework ConfigRestartBean and tag       - More tag fixups       - Add lang=xx for testing       - Add file for additional tagged strings
Monotone-Parent: 05277ac8fdb86b9ba15a1197f0d974acb92a6b43
Monotone-Revision: 3c0ec8e5a74e6de56c3409889537e7ad1caa5fa8

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-10-26T21:48:46
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,14 @@
+2009-10-26 zzz
+    * Console:
+      - Add parameterized tag
+      - Don't save config when checking for updates on configupdate.jsp
+      - Refactor confignav.jsp to java and tag
+      - Start tagging profiles.jsp
+      - Rework ConfigRestartBean and tag
+      - More tag fixups
+      - Add lang=xx for testing
+      - Add file for additional tagged strings
+
 2009-10-23 zzz
     * Certificate: Fix the (apparently unused) readBytes(byte[], int) method
       for a null certificate - http://zzz.i2p/topics/388 - thanks HungryHobo
