* Console:       - Remove limiter status from peers.jsp       - Fix UPnP status header
Monotone-Parent: dc93c1a302f3f0a02e116ba82d75ed08c870d993
Monotone-Revision: 752f53fee766a9164a0a71d25d7996ea20292f2a

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-10-28T22:12:10
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,16 @@
+2009-10-28 zzz
+    * Console:
+      - Rewrite TrustedUpdate version comparator, use for netdb version table
+        so 0.7.10 will be sorted correctly
+      - Reduce netdb.jsp memory usage
+      - More tagging fixups
+      - configclients.jsp fixup for "Web console"
+      - Remove limiter status from peers.jsp
+      - Fix UPnP status header
+    * NetDb:
+      - Generate new RI immediately at startup
+      - Try again to not publish RI until we have been up a few minutes
+
 2009-10-26 zzz
     * Console:
       - Add parameterized tag
