tag and script fixups
Monotone-Parent: 8ed4c58ee9b631081204a09f8a39e3e49e2d5e0a
Monotone-Revision: 6416a3499b7666362959e13c5996a3c925a80b60

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-10-29T23:22:51
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,7 @@
+2009-10-29 zzz
+    * Console tag fixes, bundle script fix
+    * Add help target to build.xml
+
 2009-10-28 zzz
     * Console:
       - Rewrite TrustedUpdate version comparator, use for netdb version table
