* Console:       - More tagging       - Show user-installed themes on configui.jsp       - Fix reseed button spacing     * GraphHelper cleanup     * Susidns: add link to subscription faq
Monotone-Parent: 292469ee3da52e950de5830bac7a57a219fcb74b
Monotone-Revision: 8ad766905fb47130fdf7884eb22c83b09a9daf1e

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-10-31T18:18:36
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,11 @@
+2009-10-31 zzz
+    * Console:
+      - More tagging
+      - Show user-installed themes on configui.jsp
+      - Fix reseed button spacing
+    * GraphHelper cleanup
+    * Susidns: add link to subscription faq
+
 2009-10-29 zzz
     * Console tag fixes, bundle script fix
     * Add help target to build.xml
